unpackaged/main/default/objects/CampaignMember/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Contact.Account.BillingStreet &amp; BR() &amp;  Contact.Account.BillingCity  &amp; ", " &amp;  Contact.Account.BillingState  &amp; " " &amp;  Contact.Account.BillingPostalCode</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>