unpackaged/main/default/objects/CampaignMember/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>Pending
Left Message
Responded</description>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>