unpackaged/main/default/objects/CampaignMember/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <label>Last Call Date</label>
    <type>Date</type>
</CustomField>