unpackaged/main/default/objects/CampaignMember/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <formula>TEXT(Lead.Sub_Market__c )</formula>
    <label>Sub-Market</label>
    <type>Text</type>
</CustomField>